# supermoi

./: .env  .gitignore  debate.mjs  package-lock.json  package.json  server.mjs  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx
ui/src-tauri/: tauri.conf.json
